--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@headlessui/react": "^2.2.0",
     "next": "13.5.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.7",
